# ai-invention-6bf5ea-ontological-type-constrained-abductive-c

./: README.md
iter_1/gen_art_dataset_1/: README.md
iter_1/gen_art_dataset_1/demo/: data_code_demo.ipynb  demo_result.json  mini_demo_data.json
iter_1/gen_art_dataset_1/src/: .aii_cost_ledger.jsonl  .sdk_openhands_agent_struct_out.json  create_final_output.py  data.py  data_out.json  mini_data_out.json  preview_data_out.json  preview_datasets.py  pyproject.toml
iter_1/gen_art_experiment_1/: README.md
iter_1/gen_art_experiment_1/demo/: demo_result.json  method_code_demo.ipynb  mini_demo_data.json
iter_1/gen_art_experiment_1/src/: .sdk_openhands_agent_struct_out.json  create_output.py  full_method_out.json  generate_output.py  method.py  method_out.json  preview_method_out.json  pyproject.toml
paper_latex/: paper.tex  references.bib
paper_latex/workspace/: .sdk_openhands_agent_struct_out.json  paper.aux  paper.bbl  paper.blg  paper.out  paper.tex  references.bib  references_manual.bib  refs_input.json
