[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "otc-pipeline-experiment"
version = "0.1.0"
description = "OTC Pipeline: Ontological Type-Constrained Abductive Completion for Neuro-Symbolic Reasoning"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs==2.6.2",
    "aiohttp==3.14.0",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "attrs==26.1.0",
    "certifi==2026.5.20",
    "charset-normalizer==3.4.7",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "distro==1.9.0",
    "fonttools==4.63.0",
    "frozenlist==1.8.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.18",
    "jiter==0.15.0",
    "kiwisolver==1.5.0",
    "loguru==0.7.3",
    "matplotlib==3.10.9",
    "multidict==6.7.1",
    "numpy==2.4.6",
    "openai==2.41.0",
    "packaging==26.2",
    "pandas==3.0.3",
    "pillow==12.2.0",
    "propcache==0.5.2",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "requests==2.34.2",
    "seaborn==0.13.2",
    "six==1.17.0",
    "sniffio==1.3.1",
    "tenacity==9.1.4",
    "tqdm==4.68.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.7.0",
    "yarl==1.24.2",
]
